# I_Do

./: README.md
code/: 0406.py  15-puzzle_20154523.py  8-puzzle(J).py  8-puzzle.py  Gradient Descent Method.py  K-means 2.py  KNN make.py  KNN.py  Montyhall.py  Montyhall3.py  Montyhall4.py  New_chat_client.py  New_chat_server.py  PyCharm Community Edition 2020.2.1 x64.lnk  R-M.py  Tic-Tac-Toe.py  Tic-Tac-Toe_20154523.py  Tic-Tac-Toe_20154523_update.py  Unicode.py  aaa.py  asd.py  avoid_test.py  avoider.py  avoider_2.py  chat_client.py  chat_server.py  client_grid.py  dict_ops.py  ex array.py  ex)GDM.py  ex2)GDM.py  file_client.py  list_ops.py  misc.xml  modules.xml  montyhall1.py  montyhall2.py  prices.py  pytest1.py  pytest2.py  (+21 more)
code/AI/: Classification.py  Decision K.py  F_F_2.py  F_F_2_+.py  F_F_3.py  F_F_5.py  GDM.py  (+15 more)
jupyter/: Avoid the ball (with the mouse).ipynb  Ball_Class.ipynb  Block_move.ipynb  COVID-19 Flask.ipynb  COVID-19 Web Crawling.ipynb  COVID-19_Now.csv  COVID19.db  COVID19_mem_favorite.db  Click_sound.ipynb  Grapics.ipynb  Grid_Code.ipynb  Jinja2 template _ for.ipynb  Jinja2 template _ if.ipynb  JupyterTest.ipynb  JupyterTest.py  Snow_Animation.ipynb  SoonSurf.db  Stickman_keyboard.ipynb  Untitled.ipynb  Weather use db.ipynb  Weather.db  coffee.ipynb  member.db  sqlite3.ipynb  weather.csv  weather2.csv  코드연습 (실행안됨).ipynb
robot_arm/: README.md
robot_arm/mani_test-master/mani_test-master/: CMakeLists.txt  README.md
robot_arm/mani_test-master/mani_test-master/msg/: Mdata.msg
robot_arm/mani_test-master/mani_test-master/scripts/: mani_publisher.py
(+140 files in other folders)
